--- a/src/assets/styles/cmps/feed-page/_FeedPage.scss
+++ b/src/assets/styles/cmps/feed-page/_FeedPage.scss
@@ -1,3 +1,5 @@
 .feed-page-container {
-    @include page-grid;
+  @include page-grid;
+  min-height: 100%;
+  height: 100vh;
 }
