--- a/src/assets/styles/cmps/sidebar/_GroupsSidebar.scss
+++ b/src/assets/styles/cmps/sidebar/_GroupsSidebar.scss
@@ -1,10 +1,12 @@
 .groups-sidebar-container {
+  @include sticky-top(5vh);
   @include set-grid-location(2, 1);
   display: grid;
   align-content: flex-start;
   background-color: $mainSidebarColor;
   color: white;
   row-gap: 5px;
+  z-index: 10;
 }
 
 .groups-sidebar-container #groups-sidebar-item-active {
